sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:17: error: ')' expected but '}' found.
		}
                ^AlgCocktailSort2:18: error: 'while' expected but 'for' found.
		for(i<-fin to debut by -1){
                ^AlgCocktailSort2:28: error: '(' expected but '}' found.
}
^